Replace getFirst with get(0)